--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="follow">
             <div class="follow">
                 <div class="follow">
-                    <a href="https://github.com/AbhaySingh84" class="fab fa-github"></a>
-                    <a href="https://www.linkedin.com/in/abhay-singh2005/" class="fab fa-linkedin"></a>
-                    <a href="https://www.instagram.com/yadav_abhay.18/" class="fab fa-instagram"></a>
-                    <a href="https://x.com/abhay_yabhay341" class="fab fa-twitter"></a>
+                    <a href="https://github.com/Shashi7420" class="fab fa-github"></a>
+                    <a href="https://www.linkedin.com/in/shashi-ranjan-875424255/" class="fab fa-linkedin"></a>
+                    <a href="https://www.instagram.com/sranjan41321/" class="fab fa-instagram"></a>
+                    <a href="--" class="fab fa-twitter"></a>
                 </div>
             </div>
         </div>
