--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <span class="hi"> hi there... </span>
         <h3> i am <span>Shashi Ranjan </span> </h3>
         <p class="info">Data Science  </p>
-        <p class="text">Talk about Excel, Python, Html, css, javascript </p>
+        <p class="text">Talk about Excel, Python, Java, Html, css </p>
         <a href="#about" class="btn">about me</a>
     </div>
 
@@ -88,7 +88,7 @@
 
     <div class="content">
        
-        <p>Highly skilled software developer with a passion for coding and problem solving. Proficient in Java, Python, and web development. Looking for
+        <p>Highly skilled Data Science and Programming with a passion for coding and problem solving. Proficient in Python, Java, and web development. Looking for
             opportunities to contribute to innovative software projects and collaborate
             with dynamic teams.</p>
         <div class="box-container">
@@ -118,23 +118,23 @@
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> python <span> 70% </span> </h3>
+            <h3> python <span> 80% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> Html <span> 75% </span> </h3>
+            <h3> Html <span> 70% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> css <span> 80% </span> </h3>
+            <h3> css <span> 60% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> javascript <span> 20% </span> </h3>
+            <h3> java <span> 50% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> Sql <span> 90% </span> </h3>
+            <h3> Sql <span> 80% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
@@ -147,11 +147,11 @@
     <div class="box-container">
 
         <div class="box">
-            <h3> >> 1+ </h3>
+            <h3> >> 0+ </h3>
             <p>tools and team work</p>
         </div>
         <div class="box">
-            <h3> >> 2+ </h3>
+            <h3> >> 0+ </h3>
             <p>projects completed</p>
         </div>
 
@@ -187,12 +187,24 @@
             </div>
         </div>
 
+
+        <div class="box">
+            <div class="content">
+                <span>2018 - 2021</span>
+                <h3>Bachelor of Science (Physics)</h3>
+                <p>Patliputra University</p>
+                <p>G.D.M. College,Harnaut,Nalanda,Bihar</p>
+                <p>Percentage: 64%</p>
+            </div>
+        </div>
+
+        
         <div class="box">
             <div class="content">
                 <span>2016 - 2019</span>
                 <h3>Higher Secondary Education</h3>
                 <p>Bihar School Examination Board</p>
-                <p>Sashbhana College,Bihar</p>
+                <p>Sasbahana College,Sasbahana,Sheikhpura,Bihar</p>
                 <p>Percentage: 63%</p>
             </div>
         </div>
@@ -202,8 +214,8 @@
                 <span>2019 - 2020</span>
                 <h3>Secondary Education</h3>
                 <p>Central Board of Secondary Education</p>
-                <p>Scottish Central School,Sasaram,Bihar</p>
-                <p>Percentage: 62%</p>
+                <p>Gyan Niketan Residential School,Barbigha,Sheikhpura,Bihar</p>
+                <p>CGPA: 8</p>
             </div>
         </div>
 
@@ -380,7 +392,7 @@
             <input type="submit" class="btn" value="Send Message">
         </form>
 
-        <iframe class"map" src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14437.839075016207!2d84.25369564967916!3d25.221434855312896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398d9fce1d123b5f%3A0xbd18eaad01a0d358!2sBikramganj%2C%20Bihar%20802212!5e0!3m2!1sen!2sin!4v1700306385633!5m2!1sen!2sin"
+        <iframe class"map" src=https://www.google.com/maps/place/Barbigha,+Bihar/@25.2157558,85.7122614,14z/data=!3m1!4b1!4m6!3m5!1s0x39f25d7dba31e6f7:0x862c6041ac514f!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
