--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <div class="box">
             <div class="content">
-                <span>2019 - 2020</span>
+                <span>2014 - 2016</span>
                 <h3>Secondary Education</h3>
                 <p>Central Board of Secondary Education</p>
                 <p>Gyan Niketan Residential School,Barbigha,Sheikhpura,Bihar</p>
@@ -392,7 +392,7 @@
             <input type="submit" class="btn" value="Send Message">
         </form>
 
-        <iframe class"map" src=https://www.google.com/maps/place/Barbigha,+Bihar/@25.2157558,85.7122614,14z/data=!3m1!4b1!4m6!3m5!1s0x39f25d7dba31e6f7:0x862c6041ac514f!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D"
+        <iframe class"map" src=https://www.google.com/maps/place/Barbigha,+Bihar/@25.2176037,85.735059,17z/data=!4m15!1m8!3m7!1s0x39f25d7dba31e6f7:0x862c6041ac514f!2sBarbigha,+Bihar!3b1!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439!3m5!1s0x39f25d7dba31e6f7:0x862c6041ac514f!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
