--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <input type="submit" class="btn" value="Send Message">
         </form>
 
-        <iframe class"map" src=https://www.google.com/maps/place/Barbigha,+Bihar/@25.2176037,85.735059,17z/data=!4m15!1m8!3m7!1s0x39f25d7dba31e6f7:0x862c6041ac514f!2sBarbigha,+Bihar!3b1!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439!3m5!1s0x39f25d7dba31e6f7:0x862c6041ac514f!8m2!3d25.2176032!4d85.73642!16s%2Fg%2F11bc6nj439?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D"
+        <iframe class"map" src=https://maps.app.goo.gl/8Kkemxz7NJMSMtvRA"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
