--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="row-1">
 
     <div class="image">
-        <img src="images/1749031688899.jpg" alt="">
+        <img src="images/pme-img.jpg" alt="">
     </div>
     
 
