--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     🌐 Network analysis is the process of investigating relationships and connections between entities. These entities (called nodes) are connected by links (edges). It is widely used in:
                     • Social network analysis
                     • Transportation or utility networks 
-                    • Biological networks.
+                    • Biological networks. 💻 #Networking #IT"
                     
                    
                 </p>
@@ -274,7 +274,7 @@
 
         <div class="box">
             <img src="image/Dash (2).png" alt="">
-            <h3>Study Electric Shop
+            <h3>Study Electric Shop (BDM Project)
                 </h3>
             <div class="icons">
                 <a href="---"></a>
