--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="image/Dash (2).png" alt="">
+            <img src="image/Electric Shop.png" alt="">
             <h3>Study Electric Shop (BDM Project)
                 </h3>
             <div class="icons">
