--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="image/Electric Shop.png" alt="">
+            <img src="image/Electric Shop.jpg" alt="">
             <h3>Study Electric Shop (BDM Project)
                 </h3>
             <div class="icons">
@@ -282,7 +282,7 @@
         </div>
 
         <div class="box">
-            <img src="images/sql-clean.png" alt="">
+            <img src="image/sql-clean.png" alt="">
             <h3>Academic Calendar </h3>
             <div class="icons">
                 <!-- <a href="https://github.com/Praveenmth13" class="fas fa-link"></a> -->
