--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <input type="submit" class="btn" value="Send Message">
         </form>
 
-        <iframe class"map" src=https://maps.app.goo.gl/8Kkemxz7NJMSMtvRA"
+        <iframe class"map" src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3637.289177359471!2d85.7308754!3d25.2150976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f2f6c455555555%3A0x2dd2d987e57a75e0!2sBarbigha%2C%20Bihar%2081101!5e0!3m2!1sen!2sin!4v1719243123456!5m2!1sen!2sin"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
