--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p> <span> country : </span> india </p>
             </div>
         </div>
-        <a href="https://drive.google.com/file/d/10SgIsr0yOhRHh-LxavncgsdwvM5DrUxn/view?usp=drive_link" class="btn">download Resume</a>
+        <a href="https://drive.google.com/file/d/1o3WS_k9qhTc8JXh02V6LSQNpWvltaL2I/view?usp=drive_link">download Resume</a>
     </div>
 
 </div>
